crud operations added to custom hook
